fix: too much margin bottom

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -61,7 +61,6 @@
   .imageContent {
     height: 500px;
     padding: 0px;
-    margin-bottom: 100px;
   }
 
   .imageContent img {
